--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-router/fs-routes": "^7.6.3",
     "@tailwindcss/cli": "^4.1.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^6.30.1",
     "tailwind": "^4.0.0",
     "tailwindcss": "^4.1.11"
   },
